--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>The Next Web</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://use.fontawesome.com/fde342f3c0.js">
+  </script>
 </head>
 <body>
-  
+  <header>
+      <nav class="first-nav-bar">
+        <div class="tnw-logo-container">
+          <!-- <img src="./assets/images/tnw-logo.png" alt="tnw-logo"> -->
+        </div>
+        <div class="icons-container">
+            <div>
+              <i class="fa fa-search icon-search"></i>
+            </div>
+            <div>
+              <i class="fa fa-bars icon-menu"></i>
+            </div>
+        </div>
+      </nav class="second-nav-bar">
+      <nav>
+
+      </nav>
+    </header>
 </body>
 </html>
