add markup and styles for news-highlights & latest news sections

--- a/index.html
+++ b/index.html
@@ -27,6 +27,82 @@
       <nav>
 
       </nav>
-    </header>
+  </header>
+
+  <main>
+    <section class="news-highlights">
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
+
+    <section class="latest-news">
+      <h2>Latest news > </h2>
+      <div class="latest-news-segments">
+        <div class="latest-news-pic"></div>
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis! Provident quidem consequuntur quo assumenda. Nemo omnis in sequi? Eveniet</p>
+          <span>TNW Deals</span> . <span>N hours ago</span>
+        </div>
+      </div>
+
+      <div class="latest-news-segments">
+        <div class="latest-news-pic"></div>
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis! Provident quidem consequuntur quo assumenda. Nemo omnis in sequi? Eveniet</p>
+          <span>TNW Deals</span> . <span>N hours ago</span>
+        </div>
+      </div>
+
+      <div class="latest-news-segments">
+        <div class="latest-news-pic"></div>
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis! Provident quidem consequuntur quo assumenda. Nemo omnis in sequi? Eveniet</p>
+          <span>TNW Deals</span> . <span>N hours ago</span>
+        </div>
+      </div>
+
+      <div class="latest-news-segments">
+        <div class="latest-news-pic"></div>
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis! Provident quidem consequuntur quo assumenda. Nemo omnis in sequi? Eveniet</p>
+          <span>TNW Deals</span> . <span>N hours ago</span>
+        </div>
+      </div>
+
+      <div class="latest-news-segments">
+        <div class="latest-news-pic"></div>
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis! Provident quidem consequuntur quo assumenda. Nemo omnis in sequi? Eveniet</p>
+          <span>TNW Deals</span> . <span>N hours ago</span>
+        </div>
+      </div>
+
+      <div class="latest-news-segments">
+        <div class="latest-news-pic"></div>
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis! Provident quidem consequuntur quo assumenda. Nemo omnis in sequi? Eveniet</p>
+          <span>TNW Deals</span> . <span>N hours ago</span>
+        </div>
+      </div>
+
+      <div class="latest-news-segments">
+        <div class="latest-news-pic"></div>
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis! Provident quidem consequuntur quo assumenda. Nemo omnis in sequi? Eveniet</p>
+          <span>TNW Deals</span> . <span>N hours ago</span>
+        </div>
+      </div>
+
+      <div class="latest-news-segments">
+        <div class="latest-news-pic"></div>
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis! Provident quidem consequuntur quo assumenda. Nemo omnis in sequi? Eveniet</p>
+          <span>TNW Deals</span> . <span>N hours ago</span>
+        </div>
+      </div>
+      
+    </section>
+  </main>
 </body>
 </html>
