latest funding rounds section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,78 @@
       </div>
       
     </section>
+
+    <section class="latest-funding-rounds">
+      <h2>Latest funding rounds on Index.co ></h2>
+      <p><a href="">See more</a></p>
+      <p><a href="">Get updates by email</a></p>
+      <p><a href="">Add info</a></p>
+      <div class="rounds">
+        <div class="title-div">
+          <img class="round-img" src="./assets/images/cblogo.jpg" alt="cblogo">
+          <p>Collbox</p>
+        </div>
+        <div class="round-info-div">
+          <h4>$1M</h4>
+          <h5>SEED FUND</h5>
+        </div>
+        <div class="investment-card">
+          <p><i class="fa fa-tag"></i> Bussiness services, +2</p>
+          <p><i class="fa fa-suitcase"></i> Capital Factory, +3</p>    
+        </div>
+        <div class="byline-story">
+          <p>CollBox Raises $1M in Seed Funding Round</p>
+          <p>on FinSMEs</p>
+        </div>
+      </div>
+      <div class="rounds">
+        <div class="title-div">
+          <img class="round-img" src="./assets/images/blogo.jpg" alt="blogo">
+          <p>BlueConic</p>
+        </div>
+        <div class="round-info-div">
+          <h4>$13M</h4>
+          <h5>SERIES B</h5>
+        </div>
+        <div class="investment-card">
+            <p><i class="fa fa-tag"></i> Saas, +3</p>
+            <p><i class="fa fa-suitcase"></i> Sigma Prime Ventures</p>
+          </div>
+          <div class="byline-story">
+            <p>Customer Data Platform Company BlueConic Raises $13 Million</p>
+            <p>on Pulse 2.0</p>
+          </div>  
+      </div>
+      <div class="rounds">
+        <div class="title-div">
+          <img class="round-img" src="./assets/images/ftlogo.jpg" alt="ftlogo">
+          <p>CF PharmaTech, inc.</p>
+        </div>
+        <div class="round-info-div">
+          <h4>$90.5M</h4>
+          <h5>SERIES E</h5>
+        </div>
+        <div class="investment-card">
+            <p><i class="fa fa-tag"></i> Pharmaceuticals</p>
+            <p><i class="fa fa-suitcase"></i> Cornerstone Capital, +5</p>
+        </div>
+        <div class="byline-story">
+          <p>CF PharmTech Completes $630M Series E Round</p>
+          <p>on ChinaMoneyNetwork</p>
+        </div>  
+      </div>
+    </section>
+
+    <section class="apps">
+      <h2>Apps ></h2>
+      <div class="popular">
+        <header class="most-popular">
+          <h5>MOST POPULAR</h5>
+          <h3>Our favorite things  on the internet in 2019</h3>
+          <p>Ivan Mehta - 8 days ago</p>
+        </header>
+      </div>
+    </section>
   </main>
 </body>
 </html>
