add apps section

--- a/index.html
+++ b/index.html
@@ -168,12 +168,27 @@
     <section class="apps">
       <h2>Apps ></h2>
       <div class="popular">
-        <header class="most-popular">
+        <div class="most-popular">
           <h5>MOST POPULAR</h5>
-          <h3>Our favorite things  on the internet in 2019</h3>
-          <p>Ivan Mehta - 8 days ago</p>
-        </header>
+          <a href=""><h3>Our favorite things  on the internet in 2019</h3></a> 
+          <p><a href="">Ivan Mehta</a> - 8 days ago</p>
+        </div>
       </div>
+      <div class="latest-app" >
+        <div class="latest-app-text">Google's improved travel search tools are great for planning trips on a budget</div>
+        <div class="latest-app-img">Image here</div>
+      </div>
+      <ul>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        <hr>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        <hr>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        <hr>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        <hr>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+      </ul>
     </section>
   </main>
 </body>
