add gear, podium, tech & creative sections' markups and styles

--- a/index.html
+++ b/index.html
@@ -167,28 +167,170 @@
 
     <section class="apps">
       <h2>Apps ></h2>
-      <div class="popular">
-        <div class="most-popular">
-          <h5>MOST POPULAR</h5>
-          <a href=""><h3>Our favorite things  on the internet in 2019</h3></a> 
-          <p><a href="">Ivan Mehta</a> - 8 days ago</p>
+      <div class="app-main">
+        <div class="popular">
+          <div class="most-popular">
+            <h5>MOST POPULAR</h5>
+            <a href=""><h3>Our favorite things  on the internet in 2019</h3></a> 
+            <p><a href="">Ivan Mehta</a> - 8 days ago</p>
+          </div>
         </div>
+  
+        <div class="latest-app" >
+          <div class="latest-app-text">
+            <h3>LATEST</h3>
+            <p>Google's improved travel search tools are great for planning trips on a budget</p>
+          </div>
+          <div class="latest-app-img"></div>
+        </div>
+  
+        <ul>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        </ul>
       </div>
-      <div class="latest-app" >
-        <div class="latest-app-text">Google's improved travel search tools are great for planning trips on a budget</div>
-        <div class="latest-app-img">Image here</div>
+     
+    </section>
+
+    <section class="gear">
+      <h2>Gear ></h2>
+
+      <div class="gear-main">
+        <div class="gear-main-pic">
+          <div class="most-popular">
+            <h5>MOST POPULAR</h5>
+            <a href=""><p>FBI favorite things  on the internet in 2019</p></a> 
+            <p><a href="">Bryan Clark</a> - N days ago</p>
+          </div>
+        </div>
+  
+        <div class="latest-gear" >
+          <div class="latest-gear-text">
+            <h3>LATEST</h3>
+            <p>Google's improved travel search tools are great for planning trips on a budget</p>
+          </div>
+          <div class="gear-small-img"></div>
+        </div>
+
+        <ul>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        </ul>
       </div>
-      <ul>
-        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-        <hr>
-        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-        <hr>
-        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-        <hr>
-        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-        <hr>
-        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-      </ul>
+    </section>
+
+    <section>
+      <h2>Tech ></h2>
+
+      <div class="tech-main">
+        <div class="tech-main-pic">
+          <div class="most-popular">
+            <h5>MOST POPULAR</h5>
+            <a href=""><p>FBI favorite things  on the internet in 2019</p></a> 
+            <p><a href="">Bryan Clark</a> - N days ago</p>
+          </div>
+        </div>
+  
+        <div class="latest-tech" >
+          <div class="latest-tech-text">
+            <h3>LATEST</h3>
+            <p>Google's improved travel search tools are great for planning trips on a budget</p>
+          </div>
+          <div class="tech-small-img"></div>
+        </div>
+
+        <ul>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <h2>Creative ></h2>
+      <div class="creative-main">
+        <div class="creative-main-pic">
+          <div class="most-popular">
+            <h5>MOST POPULAR</h5>
+            <a href=""><p>FBI favorite things  on the internet in 2019</p></a> 
+            <p><a href="">Bryan Clark</a> - N days ago</p>
+          </div>
+        </div>
+  
+        <div class="latest-creative" >
+          <div class="latest-creative-text">
+            <h3>LATEST</h3>
+            <p>Google's improved travel search tools are great for planning trips on a budget</p>
+          </div>
+          <div class="creative-small-img"></div>
+        </div>
+
+        <ul>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <h2>Podium ></h2>
+      <div class="podium-main">
+        <div class="podium-main-pic">
+          <div class="most-popular">
+            <h5>MOST POPULAR</h5>
+            <a href=""><p>FBI favorite things  on the internet in 2019</p></a> 
+            <p><a href="">Bryan Clark</a> - N days ago</p>
+          </div>
+        </div>
+  
+        <div class="latest-podium" >
+          <div class="latest-podium-text">
+            <h3>LATEST</h3>
+            <p>Google's improved travel search tools are great for planning trips on a budget</p>
+          </div>
+          <div class="podium-small-img"></div>
+        </div>
+
+        <ul>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        </ul>
+      </div>
     </section>
   </main>
 </body>
