add insights, launch and distract sections

--- a/index.html
+++ b/index.html
@@ -332,6 +332,106 @@
         </ul>
       </div>
     </section>
+
+    <section>
+      <h2>Insights ></h2>
+      <div class="insights-main">
+        <div class="insights-main-pic">
+          <div class="most-popular">
+            <h5>MOST POPULAR</h5>
+            <a href=""><p>FBI favorite things  on the internet in 2019</p></a> 
+            <p><a href="">Bryan Clark</a> - N days ago</p>
+          </div>
+        </div>
+  
+        <div class="latest-insights" >
+          <div class="latest-insights-text">
+            <h3>LATEST</h3>
+            <p>Google's improved travel search tools are great for planning trips on a budget</p>
+          </div>
+          <div class="insights-small-img"></div>
+        </div>
+
+        <ul>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <h2>Launch ></h2>
+      <div class="launch-main">
+        <div class="launch-main-pic">
+          <div class="most-popular">
+            <h5>MOST POPULAR</h5>
+            <a href=""><p>FBI favorite things  on the internet in 2019</p></a> 
+            <p><a href="">Bryan Clark</a> - N days ago</p>
+          </div>
+        </div>
+  
+        <div class="latest-launch" >
+          <div class="latest-launch-text">
+            <h3>LATEST</h3>
+            <p>Google's improved travel search tools are great for planning trips on a budget</p>
+          </div>
+          <div class="launch-small-img"></div>
+        </div>
+
+        <ul>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <h2>Distract ></h2>
+      <div class="distract-main">
+        <div class="distract-main-pic">
+          <div class="most-popular">
+            <h5>MOST POPULAR</h5>
+            <a href=""><p>FBI favorite things  on the internet in 2019</p></a> 
+            <p><a href="">Bryan Clark</a> - N days ago</p>
+          </div>
+        </div>
+  
+        <div class="latest-distract" >
+          <div class="latest-distract-text">
+            <h3>LATEST</h3>
+            <p>Google's improved travel search tools are great for planning trips on a budget</p>
+          </div>
+          <div class="distract-small-img"></div>
+        </div>
+
+        <ul>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <hr>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+        </ul>
+      </div>
+    </section>
+
   </main>
 </body>
 </html>
