--- a/index.html
+++ b/index.html
@@ -432,6 +432,108 @@
       </div>
     </section>
 
+    <section class="deals">
+      <header>
+        <h2>Latest deals > </h2>
+        <span>See all Deals</span>
+      </header>
+      <div class="deal-container">
+        <div class="deal-pic"></div>
+        <div class="deal-info">
+          <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+          <span class="old-price">X $</span> <span class="new-price">N $</span>
+        </div>
+      </div>
+
+      <div class="deal-container">
+        <div class="deal-pic"></div>
+        <div class="deal-info">
+          <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+          <span class="old-price">X $</span> <span class="new-price">N $</span>
+        </div>
+      </div>
+
+      <div class="deal-container">
+        <div class="deal-pic"></div>
+        <div class="deal-info">
+          <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+          <span class="old-price">X $</span> <span class="new-price">N $</span>
+        </div>
+      </div>
+
+      <div class="deal-container">
+        <div class="deal-pic"></div>
+        <div class="deal-info">
+          <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+          <span class="old-price">X $</span> <span class="new-price">N $</span>
+        </div>
+      </div>
+
+      <div class="deal-container">
+        <div class="deal-pic"></div>
+        <div class="deal-info">
+          <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+          <span class="old-price">X $</span> <span class="new-price">N $</span>
+        </div>
+      </div>
+
+      <div class="deal-container">
+        <div class="deal-pic"></div>
+        <div class="deal-info">
+          <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+          <span class="old-price">X $</span> <span class="new-price">N $</span>
+        </div>
+      </div>
+
+      <div class="deal-container"> 
+        <div class="deal-pic"></div>
+        <div class="deal-info">
+          <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+          <span class="old-price">X $</span> <span class="new-price">N $</span>
+        </div>
+      </div>
+
+      <div class="deal-container">
+        <div class="deal-pic"></div>
+        <div class="deal-info">
+          <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+          <span class="old-price">X $</span> <span class="new-price">N $</span>
+        </div>
+      </div>
+    </section>
   </main>
+  <footer>
+    <div class="socials">
+      <a href="">
+        <i class="fa fa-facebook"></i>
+      </a>
+      <a href="">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <a href="">
+        <i class="fa fa-youtube"></i>
+      </a>
+      <a href="">
+        <i class="fa fa-instagram"></i>
+      </a>
+      <a href="">
+        <i class="fa fa-pinterest"></i>
+      </a>
+      <a href="">
+        <i class="fa fa-rss"></i>
+      </a>
+      <a href="">
+        <i class="fa fa-envelope"></i>
+      </a>
+    </div>
+
+    <div class="footer-links">
+      <a href="">EVENTS</a>
+      <a href="">ABOUT</a>
+      <a href="">ADVERTISE</a>
+      <a href="">JOBS</a>
+      <a href="">CONTACT</a>
+    </div>
+  </footer>
 </body>
 </html>
