add media queries for medium screen size

--- a/index.html
+++ b/index.html
@@ -11,16 +11,31 @@
 </head>
 <body>
   <header>
-      <nav class="first-nav-bar">
-        <div class="tnw-logo-container">
-          <!-- <img src="./assets/images/tnw-logo.png" alt="tnw-logo"> -->
-        </div>
+      <nav class="navbar">
+        <div class="tnw-logo-container"></div>
         <div class="icons-container">
-            <div>
+            <div class="top-navbar-row">
               <i class="fa fa-search icon-search"></i>
+              <ul>
+                <li>News</li>
+                <li>Events</li>
+                <li>Bussiness</li>
+                <li>AMAs</li>
+                <li>Spaces</li>
+                <li>Terms & Conditions</li>
+              </ul>
             </div>
-            <div>
+
+            <div class="second-navbar-row">
               <i class="fa fa-bars icon-menu"></i>
+
+              <ul>
+                <li>LATEST</li>
+                <li>HARD FORK</li>
+                <li>PLUGGED</li>
+                <li>FUNDAMENTALS</li>
+                <li>WORK 2030</li>
+              </ul>
             </div>
         </div>
       </nav class="second-nav-bar">
@@ -31,9 +46,9 @@
 
   <main>
     <section class="news-highlights">
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="large-pic"></div>
+      <div class="top-right-pic"></div>
+      <div class="bottom-right-pic"></div>
     </section>
 
     <section class="latest-news">
