--- a/index.html
+++ b/index.html
@@ -452,111 +452,122 @@
         </div>
       </section>
 
-      <section class="deals">
+
+
+    </section>
+    <section class="deals">
         <header>
           <h2>Latest deals > </h2>
           <span>See all Deals</span>
         </header>
-        <div class="deal-container">
-          <div class="deal-pic"></div>
-          <div class="deal-info">
-            <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
-            <span class="old-price">X $</span> <span class="new-price">N $</span>
+        <div class="deals-main">
+          <div class="deal-container">
+            <div class="deal-pic"></div>
+            <div class="deal-info">
+              <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+              <span class="old-price">X $</span> <span class="new-price">N $</span>
+            </div>
           </div>
-        </div>
 
-        <div class="deal-container">
-          <div class="deal-pic"></div>
-          <div class="deal-info">
-            <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
-            <span class="old-price">X $</span> <span class="new-price">N $</span>
+          <div class="deal-container">
+            <div class="deal-pic"></div>
+            <div class="deal-info">
+              <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+              <span class="old-price">X $</span> <span class="new-price">N $</span>
+            </div>
           </div>
-        </div>
 
-        <div class="deal-container">
-          <div class="deal-pic"></div>
-          <div class="deal-info">
-            <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
-            <span class="old-price">X $</span> <span class="new-price">N $</span>
+          <div class="deal-container">
+            <div class="deal-pic"></div>
+            <div class="deal-info">
+              <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+              <span class="old-price">X $</span> <span class="new-price">N $</span>
+            </div>
           </div>
-        </div>
 
-        <div class="deal-container">
-          <div class="deal-pic"></div>
-          <div class="deal-info">
-            <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
-            <span class="old-price">X $</span> <span class="new-price">N $</span>
+          <div class="deal-container">
+            <div class="deal-pic"></div>
+            <div class="deal-info">
+              <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+              <span class="old-price">X $</span> <span class="new-price">N $</span>
+            </div>
           </div>
-        </div>
 
-        <div class="deal-container">
-          <div class="deal-pic"></div>
-          <div class="deal-info">
-            <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
-            <span class="old-price">X $</span> <span class="new-price">N $</span>
+          <div class="deal-container">
+            <div class="deal-pic"></div>
+            <div class="deal-info">
+              <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+              <span class="old-price">X $</span> <span class="new-price">N $</span>
+            </div>
           </div>
-        </div>
 
-        <div class="deal-container">
-          <div class="deal-pic"></div>
-          <div class="deal-info">
-            <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
-            <span class="old-price">X $</span> <span class="new-price">N $</span>
+          <div class="deal-container">
+            <div class="deal-pic"></div>
+            <div class="deal-info">
+              <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+              <span class="old-price">X $</span> <span class="new-price">N $</span>
+            </div>
           </div>
-        </div>
 
-        <div class="deal-container"> 
-          <div class="deal-pic"></div>
-          <div class="deal-info">
-            <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
-            <span class="old-price">X $</span> <span class="new-price">N $</span>
+          <div class="deal-container"> 
+            <div class="deal-pic"></div>
+            <div class="deal-info">
+              <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+              <span class="old-price">X $</span> <span class="new-price">N $</span>
+            </div>
           </div>
-        </div>
 
-        <div class="deal-container">
-          <div class="deal-pic"></div>
-          <div class="deal-info">
-            <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
-            <span class="old-price">X $</span> <span class="new-price">N $</span>
+          <div class="deal-container">
+            <div class="deal-pic"></div>
+            <div class="deal-info">
+              <p>Lorem ipsum dolor, sit amet consectetur adipi</p>
+              <span class="old-price">X $</span> <span class="new-price">N $</span>
+            </div>
           </div>
         </div>
       </section>
-
-  </section>
-
   </main>
   <footer>
-    <div class="socials">
-      <a href="">
-        <i class="fa fa-facebook"></i>
-      </a>
-      <a href="">
-        <i class="fa fa-twitter"></i>
-      </a>
-      <a href="">
-        <i class="fa fa-youtube"></i>
-      </a>
-      <a href="">
-        <i class="fa fa-instagram"></i>
-      </a>
-      <a href="">
-        <i class="fa fa-pinterest"></i>
-      </a>
-      <a href="">
-        <i class="fa fa-rss"></i>
-      </a>
-      <a href="">
-        <i class="fa fa-envelope"></i>
-      </a>
+    <div class="footer-top">      
+      <div class="socials">
+        <a href="">
+          <i class="fa fa-facebook"></i>
+        </a>
+        <a href="">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="">
+          <i class="fa fa-youtube"></i>
+        </a>
+        <a href="">
+          <i class="fa fa-instagram"></i>
+        </a>
+        <a href="">
+          <i class="fa fa-pinterest"></i>
+        </a>
+        <a href="">
+          <i class="fa fa-rss"></i>
+        </a>
+        <a href="">
+          <i class="fa fa-envelope"></i>
+        </a>
+      </div>
+      <div class="footer-links">
+        <a href="">EVENTS</a>
+        <a href="">ABOUT</a>
+        <a href="">ADVERTISE</a>
+        <a href="">JOBS</a>
+        <a href="">CONTACT</a>
+      </div>
     </div>
-
-    <div class="footer-links">
-      <a href="">EVENTS</a>
-      <a href="">ABOUT</a>
-      <a href="">ADVERTISE</a>
-      <a href="">JOBS</a>
-      <a href="">CONTACT</a>
+    <div class="copyright"> 
+        <p>
+          <img class="footer-logo" src="./assets/images/tnw-tiny.svg" alt="tiny-logo">
+          © 2006–2020 The Next Web B.V. <br>
+          Made with <span>♥</span> in Amsterdam. <br>
+          Powered by StackPath
+        </p>
     </div>
-  </footer>
+</footer>
 </body>
 </html>
