make navbar responsive for desktop screen size

--- a/index.html
+++ b/index.html
@@ -15,15 +15,26 @@
         <div class="tnw-logo-container"></div>
         <div class="icons-container">
             <div class="top-navbar-row">
+              <div class="top-navbar-row-ul-container">
+                <ul>
+                  <li>News</li>
+                  <li>Events</li>
+                  <li>Bussiness</li>
+                  <li>AMAs</li>
+                  <li>Spaces</li>
+                  <li>Terms & Conditions</li>
+                </ul>
+  
+                <ul class="desktop-screen-ul">
+                  <li>About</li>
+                  <li>Team</li>
+                  <li>Advertise</li>
+                  <li>Jobs</li>
+                  <li>Contact</li>
+                </ul>
+              </div>
+
               <i class="fa fa-search icon-search"></i>
-              <ul>
-                <li>News</li>
-                <li>Events</li>
-                <li>Bussiness</li>
-                <li>AMAs</li>
-                <li>Spaces</li>
-                <li>Terms & Conditions</li>
-              </ul>
             </div>
 
             <div class="second-navbar-row">
@@ -36,11 +47,12 @@
                 <li>FUNDAMENTALS</li>
                 <li>WORK 2030</li>
               </ul>
+
+              <div class="desktop-search-div">
+                <i class="fa fa-search icon-search"></i>
+              </div>
             </div>
         </div>
-      </nav class="second-nav-bar">
-      <nav>
-
       </nav>
   </header>
 
@@ -563,9 +575,9 @@
     <div class="copyright"> 
         <p>
           <img class="footer-logo" src="./assets/images/tnw-tiny.svg" alt="tiny-logo">
-          © 2006–2020 The Next Web B.V. <br>
-          Made with <span>♥</span> in Amsterdam. <br>
-          Powered by StackPath
+          © 2006–2020 The Next Web B.V. 
+          <span class="footer-levels">Made with <span class="footer-love-icon">♥</span> in Amsterdam.</span> 
+           <span class="footer-levels">Powered by StackPath</span>
         </p>
     </div>
 </footer>
