--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       </nav>
   </header>
 
+  <div class="seperate-nabar"></div>
   <main>
     <section class="news-highlights">
       <div class="large-pic"></div>
