make rounds section responsive

--- a/index.html
+++ b/index.html
@@ -134,10 +134,16 @@
     </section>
 
     <section class="latest-funding-rounds">
-      <h2>Latest funding rounds on Index.co ></h2>
-      <p><a href="">See more</a></p>
-      <p><a href="">Get updates by email</a></p>
-      <p><a href="">Add info</a></p>
+      <div class="latest-rounds-info">
+        <h2>Latest funding rounds on Index.co ></h2>
+        <div class="rounds-links">
+          <p><a href="">See more</a></p>
+          <span class="separator-span">|</span>
+          <p><a href="">Get updates by email</a></p>
+          <span class="separator-span">|</span>
+          <p><a href="">Add info</a></p>
+        </div>  
+      </div>
       <div class="rounds-main">
           <div class="rounds">
               <div class="title-div">
@@ -193,7 +199,26 @@
                 <p>on ChinaMoneyNetwork</p>
               </div>  
             </div>
-      </div>
+            <div class="rounds">
+                <div class="title-div">
+                  <img class="round-img" src="./assets/images/ftlogo.jpg" alt="ftlogo">
+                  <p>CF PharmaTech, inc.</p>
+                </div>
+                <div class="round-info-div">
+                  <h4>$90.5M</h4>
+                  <h5>SERIES E</h5>
+                </div>
+                <div class="investment-card">
+                    <p><i class="fa fa-tag"></i> Pharmaceuticals</p>
+                    <p><i class="fa fa-suitcase"></i> Cornerstone Capital, +5</p>
+                </div>
+                <div class="byline-story">
+                  <p>CF PharmTech Completes $630M Series E Round</p>
+                  <p>on ChinaMoneyNetwork</p>
+                </div>  
+              </div>
+  
+          </div>
 
     </section>
 
