add contents to news highlights section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>The Next Web</title>
+  <link 
+   href="https://fonts.googleapis.com/css?family=Kanit:100,200,200i,300,400,500,700|Rajdhani:400,500,600,700&display=swap" 
+   rel="stylesheet"
+  >
   <link rel="stylesheet" href="style.css">
   <script src="https://use.fontawesome.com/fde342f3c0.js">
   </script>
@@ -17,7 +21,7 @@
             <div class="top-navbar-row">
               <div class="top-navbar-row-ul-container">
                 <ul>
-                  <li>News</li>
+                  <li class="top-navbar-news-item">News</li>
                   <li>Events</li>
                   <li>Bussiness</li>
                   <li>AMAs</li>
@@ -57,20 +61,65 @@
   </header>
 
   <div class="seperate-nabar"></div>
+
   <main>
     <section class="news-highlights">
-      <div class="large-pic"></div>
-      <div class="top-right-pic"></div>
-      <div class="bottom-right-pic"></div>
+      <div class="large-pic">
+        <div class="desktop-logo-parent-div">
+          <div class="tnw-desktop-logo-space">
+            <img class="tnw-desktop-logo-img" src="./assets/images/tnw-tiny.svg" alt="tiny-logo">
+          </div>
+          <p>Friday - January 10, 2020</p>
+        </div>
+
+        <div class="news-highlights-info-main">
+          <p>APPS</p>
+          <p class="large-pic-label">Facebook is reportedly planning to launch TikTok competitor in India by May</p>
+          <p>
+            <span>by Ivan Mehta</span> 
+            <i class="fa fa-clock-o news-highlights-info-main-i"></i> 
+            58 minutes ago  
+            <i class="fa fa-share-alt news-highlights-info-main-i"></i>
+            5
+          </p>
+        </div>
+      </div>
+      <div class="top-right-pic">
+        <div class="news-highlights-info-main">
+          <p>APPS</p>
+          <p class="news-highlights-side-pic-label">Jeopardy! adds Bitcoin ransomware to its GOAT tournament</p>
+          <p>
+            <span>by David Canelis</span> 
+            <i class="fa fa-clock-o news-highlights-info-main-i"></i> 
+            58 minutes ago  
+            <i class="fa fa-share-alt news-highlights-info-main-i"></i>
+            5
+          </p>
+        </div>
+      </div>
+
+      <div class="bottom-right-pic">
+        <div class="news-highlights-info-main">
+          <p>APPS</p>
+          <p class="news-highlights-side-pic-label">Facebook is reportedly planning to launch TikTok competitor in India by May</p>
+          <p>
+            <span>by Ivan Mehta</span> 
+            <i class="fa fa-clock-o news-highlights-info-main-i"></i> 
+            58 minutes ago  
+            <i class="fa fa-share-alt news-highlights-info-main-i"></i>
+            5
+          </p>
+        </div>
+      </div>
     </section>
 
     <section class="latest-news">
-      <h2>Latest news > </h2>
+      <h2>Latest news<span>></span></h2>
       <div class="latest-news-main">
           <div class="latest-news-segments">
               <div class="latest-news-pic"></div>
               <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio blanditiis!</p>
                 <span>TNW Deals</span> . <span>N hours ago</span>
               </div>
             </div>
@@ -78,7 +127,7 @@
             <div class="latest-news-segments">
               <div class="latest-news-pic"></div>
               <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio blanditiis!</p>
                 <span>TNW Deals</span> . <span>N hours ago</span>
               </div>
             </div>
@@ -86,7 +135,7 @@
             <div class="latest-news-segments">
               <div class="latest-news-pic"></div>
               <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio blanditiis!</p>
                 <span>TNW Deals</span> . <span>N hours ago</span>
               </div>
             </div>
@@ -94,7 +143,7 @@
             <div class="latest-news-segments">
               <div class="latest-news-pic"></div>
               <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio blanditiis!</p>
                 <span>TNW Deals</span> . <span>N hours ago</span>
               </div>
             </div>
@@ -102,7 +151,7 @@
             <div class="latest-news-segments">
               <div class="latest-news-pic"></div>
               <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio blanditiis!</p>
                 <span>TNW Deals</span> . <span>N hours ago</span>
               </div>
             </div>
@@ -110,7 +159,7 @@
             <div class="latest-news-segments">
               <div class="latest-news-pic"></div>
               <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio blanditiis!</p>
                 <span>TNW Deals</span> . <span>N hours ago</span>
               </div>
             </div>
@@ -118,7 +167,7 @@
             <div class="latest-news-segments">
               <div class="latest-news-pic"></div>
               <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio blanditiis!</p>
                 <span>TNW Deals</span> . <span>N hours ago</span>
               </div>
             </div>
@@ -126,7 +175,7 @@
             <div class="latest-news-segments">
               <div class="latest-news-pic"></div>
               <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident illum itaque nisi odio blanditiis!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio blanditiis!</p>
                 <span>TNW Deals</span> . <span>N hours ago</span>
               </div>
             </div>      
@@ -223,7 +272,7 @@
 
     <section class="categories">
       <section class="apps">
-        <h2>Apps ></h2>
+        <h2>Apps<span>></span></h2>
         <div class="app-main">
           <div class="popular">
             <div class="most-popular">
@@ -257,7 +306,7 @@
       </section>
 
       <section class="gear">
-        <h2>Gear ></h2>
+        <h2>Gear<span>></span></h2>
 
         <div class="gear-main">
           <div class="gear-main-pic">
@@ -291,7 +340,7 @@
       </section>
 
       <section>
-        <h2>Tech ></h2>
+        <h2>Tech<span>></span></h2>
 
         <div class="tech-main">
           <div class="tech-main-pic">
@@ -325,7 +374,7 @@
       </section>
 
       <section>
-        <h2>Creative ></h2>
+        <h2>Creative<span>></span></h2>
         <div class="creative-main">
           <div class="creative-main-pic">
             <div class="most-popular">
@@ -358,7 +407,7 @@
       </section>
 
       <section>
-        <h2>Podium ></h2>
+        <h2>Podium<span>></span></h2>
         <div class="podium-main">
           <div class="podium-main-pic">
             <div class="most-popular">
@@ -391,7 +440,7 @@
       </section>
 
       <section>
-        <h2>Insights ></h2>
+        <h2>Insights<span>></span></h2>
         <div class="insights-main">
           <div class="insights-main-pic">
             <div class="most-popular">
@@ -424,7 +473,7 @@
       </section>
 
       <section>
-        <h2>Launch ></h2>
+        <h2>Launch<span>></span></h2>
         <div class="launch-main">
           <div class="launch-main-pic">
             <div class="most-popular">
@@ -457,7 +506,7 @@
       </section>
 
       <section>
-        <h2>Distract ></h2>
+        <h2>Distract<span>></span></h2>
         <div class="distract-main">
           <div class="distract-main-pic">
             <div class="most-popular">
@@ -488,8 +537,6 @@
           </ul>
         </div>
       </section>
-
-
 
     </section>
     <section class="deals">
@@ -562,7 +609,7 @@
             </div>
           </div>
         </div>
-      </section>
+    </section>
   </main>
   <footer>
     <div class="footer-top">      
