remove hr from ul li html flow

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>The Next Web</title>
   <link 
-   href="https://fonts.googleapis.com/css?family=Kanit:100,200,200i,300,400,500,700|Rajdhani:400,500,600,700&display=swap" 
+   href="https://fonts.googleapis.com/css?family=Kanit:100,200,200i,300,400,500,700,Rajdhani:400,500,600,700&display=swap" 
    rel="stylesheet"
   >
   <link rel="stylesheet" href="style.css">
@@ -290,13 +290,9 @@
           </div>
           <ul>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
           </ul>
         </div>
@@ -325,13 +321,9 @@
 
           <ul>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
           </ul>
         </div>
@@ -359,13 +351,9 @@
 
           <ul>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
           </ul>
         </div>
@@ -392,13 +380,9 @@
 
           <ul>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
           </ul>
         </div>
@@ -425,13 +409,9 @@
 
           <ul>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
           </ul>
         </div>
@@ -458,13 +438,9 @@
 
           <ul>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
           </ul>
         </div>
@@ -491,13 +467,9 @@
 
           <ul>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
           </ul>
         </div>
@@ -524,13 +496,9 @@
 
           <ul>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-            <hr>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
           </ul>
         </div>
