add logos to latest funding rounds segments

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </div>
         <div class="rounds">
           <div class="title-div">
-            <img class="round-img" src="./assets/images/ftlogo.jpg" alt="ftlogo">
+            <img class="round-img" src="./assets/images/cblogo.jpg" alt="ftlogo">
             <p>CF PharmaTech, inc.</p>
           </div>
           <div class="round-info-div">
@@ -250,7 +250,7 @@
         </div>
         <div class="rounds">
             <div class="title-div">
-              <img class="round-img" src="./assets/images/ftlogo.jpg" alt="ftlogo">
+              <img class="round-img" src="./assets/images/blogo.jpg" alt="ftlogo">
               <p>CF PharmaTech, inc.</p>
             </div>
             <div class="round-info-div">
